tests/paczka2/big_fuzzy/75151767.err
Error in line 6: uZNpi8ZJTi S783 214,3
Error in line 3: S792 A716 79,6
Error in line 11: S792 S792 22,3
Error in line 7: uZNpi8ZJTi S947 60,6
Error in line 16: uZNpi8ZJTi S792 78,3
Error in line 29: 1D3Q S792 49,5
Error in line 30: dPB S792 42,9
Error in line 39: 1D3Q S947 84,6
Error in line 40: 1D3Q A716 65,5
Error in line 46: C4PqQYzMw S792 13,1
Error in line 45: 1D3Q S783 76,4
Error in line 70: S792 A716 26,7
Error in line 68: Caz A716 17,2
Error in line 74: S792 S947 27,2
Error in line 72: 1D3Q A716 375,2
Error in line 87: Caz S947 -6,5
Error in line 96: 1D3Q S792 32,8
Error in line 98: OxW23ZtgNMz S783 16,2
Error in line 77: Caz S947 91,4
Error in line 106: S792 S783 2459,5
Error in line 111: C4PqQYzMw S947 36,8
Error in line 116: C4PqQYzMw A716 50,0
Error in line 76: uZNpi8ZJTi S792 60,2
Error in line 117: dPB S783 73,1
Error in line 123: C4PqQYzMw S947 33,9
Error in line 147: OxW23ZtgNMz S792 98,4
Error in line 155: Caz S947 14c,9
Error in line 162: uZNpi8ZJTi A716 30,9
Error in line 156: dPB S783 86,3
Error in line 163: uZNpi8ZJTi S783 95,0
Error in line 175: OxW23ZtgNMz A716 64,9
Error in line 149: Caz S947 53,6
Error in line 188: uZNpi8ZJTi A716 97,1
Error in line 195: C4PqQYzMw S783 93,2
Error in line 197: Caz A716 78,6
Error in line 198: S792 A716 36,7
Error in line 209: S792 A716 31,7
Error in line 213: S792 S792 80,6
Error in line 215: S792 A716 52,3
Error in line 220: dPB S783 14,2
Error in line 229: OxW23ZtgNMz S783 9,2
Error in line 241: OxW23ZtgNMz A716 71,9
Error in line 218: 1D3Q S783 392,0
